--- a/angular.json
+++ b/angular.json
@@ -48,6 +48,8 @@
               "./src/assets/plugins/sticky-kit-master/dist/sticky-kit.min.js"
               ,"./src/assets/js/custom.min.js",
             "./src/assets/plugins/styleswitcher/jQuery.style.switcher.js",
+           //   "./src/assets/plugins/footable/js/footable.all.min.js",
+             // "./src/assets/js/footable-init.js",
 //              "./src/assets/plugins/chartist-js/dist/chartist.min.js",
 
   //            "./src/assets/plugins/chartist-plugin-tooltip-master/dist/chartist-plugin-tooltip.min.js",
